--- a/app.json
+++ b/app.json
@@ -1,9 +1,18 @@
 {
   "name": "abilek",
-  "description": "gatau",
+  "description": "coba tebak",
   "repository": "https://github.com/kepo-cupul/entahlah",
   "logo": "https://avatars.githubusercontent.com/u/79621549?v=4",
   "keywords": [
-        "gada:v"
+        "tebak sendiri",
+        "gatau apa ini",
+        "gabut:v",
+        "s",
+        "s",
+        "h",
+        "aslinya",
+        "gatau",
+        "ini",
+        "apa"
   ]
 }
